{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 110,
  "lineage": "2eb1487e-01fa-38bc-ee5e-5b7c6aaf6a42",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030743829926:subnet/subnet-0492bd472e0b60d3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.30.144.0/20",
            "default_for_az": false,
            "id": "subnet-0492bd472e0b60d3d",
            "map_public_ip_on_launch": false,
            "owner_id": "030743829926",
            "state": "available",
            "tags": {
              "Name": "Openshift-subnet-private2-us-east-1f",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "shared"
            },
            "vpc_id": "vpc-0a6d694ba64b4a5fc"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030743829926:subnet/subnet-05bdb5b484f579c32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.30.160.0/20",
            "default_for_az": false,
            "id": "subnet-05bdb5b484f579c32",
            "map_public_ip_on_launch": false,
            "owner_id": "030743829926",
            "state": "available",
            "tags": {
              "Name": "Openshift-subnet-private3-us-east-1c",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "shared"
            },
            "vpc_id": "vpc-0a6d694ba64b4a5fc"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030743829926:subnet/subnet-0a5f39fd082f14b0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.30.128.0/20",
            "default_for_az": false,
            "id": "subnet-0a5f39fd082f14b0b",
            "map_public_ip_on_launch": false,
            "owner_id": "030743829926",
            "state": "available",
            "tags": {
              "Name": "Openshift-subnet-private1-us-east-1d",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "shared"
            },
            "vpc_id": "vpc-0a6d694ba64b4a5fc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030743829926:subnet/subnet-0c17abbe0ad66da67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.30.16.0/20",
            "default_for_az": false,
            "id": "subnet-0c17abbe0ad66da67",
            "map_public_ip_on_launch": false,
            "owner_id": "030743829926",
            "state": "available",
            "tags": {
              "Name": "Openshift-subnet-public2-us-east-1f",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "shared"
            },
            "vpc_id": "vpc-0a6d694ba64b4a5fc"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030743829926:subnet/subnet-0e400f5a409e8cc32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.30.32.0/20",
            "default_for_az": false,
            "id": "subnet-0e400f5a409e8cc32",
            "map_public_ip_on_launch": false,
            "owner_id": "030743829926",
            "state": "available",
            "tags": {
              "Name": "Openshift-subnet-public3-us-east-1c",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "shared"
            },
            "vpc_id": "vpc-0a6d694ba64b4a5fc"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030743829926:subnet/subnet-04290fcfdc25af0ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.30.0.0/20",
            "default_for_az": false,
            "id": "subnet-04290fcfdc25af0ad",
            "map_public_ip_on_launch": false,
            "owner_id": "030743829926",
            "state": "available",
            "tags": {
              "Name": "Openshift-subnet-public1-us-east-1d",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "shared"
            },
            "vpc_id": "vpc-0a6d694ba64b4a5fc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030743829926:vpc/vpc-0a6d694ba64b4a5fc",
            "cidr_block": "172.30.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a17f1ee1f5b47e12",
                "cidr_block": "172.30.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-02d4dd754e56ee179",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a6d694ba64b4a5fc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06efbca4886f46ca6",
            "owner_id": "030743829926",
            "state": "available",
            "tags": {
              "CreatedBy": "ssavaliya@bjs.com",
              "Name": "Openshift-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06e6531aef9359b1e",
            "arn": "arn:aws:ec2:us-east-1:030743829926:instance/i-06dbd12835a17e845",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bjs-cp4i-ms72d-master-profile",
            "id": "i-06dbd12835a17e845",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-02644ad87bf78e905"
              }
            ],
            "primary_network_interface_id": "eni-02644ad87bf78e905",
            "private_dns": "ip-172-30-153-126.ec2.internal",
            "private_ip": "172.30.153.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:us-east-1:030743829926:key/e183cef1-dc7d-4742-a171-7540d762a99d",
                "volume_id": "vol-04af73f2bb7955ff9",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0492bd472e0b60d3d",
            "tags": {
              "AppName": "APIC",
              "CreatedBy": "openshift-poc",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-master-0",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            },
            "tenancy": "default",
            "volume_tags": {
              "AppName": "APIC",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-master-0-vol",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            },
            "vpc_security_group_ids": [
              "sg-0542458c734eb8e0c"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06e6531aef9359b1e",
            "arn": "arn:aws:ec2:us-east-1:030743829926:instance/i-08a5d64604328acf2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bjs-cp4i-ms72d-master-profile",
            "id": "i-08a5d64604328acf2",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0e31efa20981888b4"
              }
            ],
            "primary_network_interface_id": "eni-0e31efa20981888b4",
            "private_dns": "ip-172-30-167-136.ec2.internal",
            "private_ip": "172.30.167.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:us-east-1:030743829926:key/e183cef1-dc7d-4742-a171-7540d762a99d",
                "volume_id": "vol-03d9b22d5e227cb97",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bdb5b484f579c32",
            "tags": {
              "AppName": "APIC",
              "CreatedBy": "openshift-poc",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-master-1",
              "Project": "Digital",
              "custodian-stop-notification-sent": "yes",
              "custodian-tag-compliant": "no",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "maid_status": "Resource does not meet policy: stop@2022/06/30 1600 UTC",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            },
            "tenancy": "default",
            "volume_tags": {
              "AppName": "APIC",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-master-1-vol",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            },
            "vpc_security_group_ids": [
              "sg-0542458c734eb8e0c"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06e6531aef9359b1e",
            "arn": "arn:aws:ec2:us-east-1:030743829926:instance/i-0d9bae3728ece7b59",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bjs-cp4i-ms72d-master-profile",
            "id": "i-0d9bae3728ece7b59",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-04f46b7bee9adc1a9"
              }
            ],
            "primary_network_interface_id": "eni-04f46b7bee9adc1a9",
            "private_dns": "ip-172-30-131-39.ec2.internal",
            "private_ip": "172.30.131.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:us-east-1:030743829926:key/e183cef1-dc7d-4742-a171-7540d762a99d",
                "volume_id": "vol-071d384e53c987fd8",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5f39fd082f14b0b",
            "tags": {
              "AppName": "APIC",
              "CreatedBy": "openshift-poc",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-master-2",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            },
            "tenancy": "default",
            "volume_tags": {
              "AppName": "APIC",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-master-2-vol",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            },
            "vpc_security_group_ids": [
              "sg-0542458c734eb8e0c"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:loadbalancer/net/bjs-cp4i-ms72d-int/17b942fc4c09c02d",
            "arn_suffix": "net/bjs-cp4i-ms72d-int/17b942fc4c09c02d",
            "dns_name": "bjs-cp4i-ms72d-int-17b942fc4c09c02d.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:030743829926:loadbalancer/net/bjs-cp4i-ms72d-int/17b942fc4c09c02d",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "bjs-cp4i-ms72d-int",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0492bd472e0b60d3d"
              },
              {
                "subnet_id": "subnet-05bdb5b484f579c32"
              },
              {
                "subnet_id": "subnet-0a5f39fd082f14b0b"
              }
            ],
            "subnets": [
              "subnet-0492bd472e0b60d3d",
              "subnet-05bdb5b484f579c32",
              "subnet-0a5f39fd082f14b0b"
            ],
            "tags": {
              "AppName": "APIC",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-int",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-0a6d694ba64b4a5fc",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:listener/net/bjs-cp4i-ms72d-int/17b942fc4c09c02d/6a6bd9741f38bd10",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-aint/bd4a7ea75f95cdf6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:030743829926:listener/net/bjs-cp4i-ms72d-int/17b942fc4c09c02d/6a6bd9741f38bd10",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:loadbalancer/net/bjs-cp4i-ms72d-int/17b942fc4c09c02d",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.api_internal"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:listener/net/bjs-cp4i-ms72d-int/17b942fc4c09c02d/e435ef2de045a777",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-sint/dda0c59b0823f80b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:030743829926:listener/net/bjs-cp4i-ms72d-int/17b942fc4c09c02d/e435ef2de045a777",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:loadbalancer/net/bjs-cp4i-ms72d-int/17b942fc4c09c02d",
            "port": 22623,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-aint/bd4a7ea75f95cdf6",
            "arn_suffix": "targetgroup/bjs-cp4i-ms72d-aint/bd4a7ea75f95cdf6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-aint/bd4a7ea75f95cdf6",
            "lambda_multi_value_headers_enabled": false,
            "name": "bjs-cp4i-ms72d-aint",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "AppName": "APIC",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-aint",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0a6d694ba64b4a5fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-sint/dda0c59b0823f80b",
            "arn_suffix": "targetgroup/bjs-cp4i-ms72d-sint/dda0c59b0823f80b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "22623",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-sint/dda0c59b0823f80b",
            "lambda_multi_value_headers_enabled": false,
            "name": "bjs-cp4i-ms72d-sint",
            "port": 22623,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "AppName": "APIC",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-sint",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0a6d694ba64b4a5fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-aint/bd4a7ea75f95cdf6-20220630150033421800000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-aint/bd4a7ea75f95cdf6",
            "target_id": "172.30.153.126"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-sint/dda0c59b0823f80b-20220630150033416500000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-sint/dda0c59b0823f80b",
            "target_id": "172.30.153.126"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-aint/bd4a7ea75f95cdf6-2022063015003349770000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-aint/bd4a7ea75f95cdf6",
            "target_id": "172.30.167.136"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-sint/dda0c59b0823f80b-20220630150033472400000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-sint/dda0c59b0823f80b",
            "target_id": "172.30.167.136"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-aint/bd4a7ea75f95cdf6-2022063015003355100000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-aint/bd4a7ea75f95cdf6",
            "target_id": "172.30.131.39"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-sint/dda0c59b0823f80b-2022063015003382420000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:030743829926:targetgroup/bjs-cp4i-ms72d-sint/dda0c59b0823f80b",
            "target_id": "172.30.131.39"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "description": "Created By OpenShift Installer",
            "id": "eni-02644ad87bf78e905",
            "mac_address": "16:43:6b:b7:6f:97",
            "private_dns_name": "ip-172-30-153-126.ec2.internal",
            "private_ip": "172.30.153.126",
            "private_ips": [
              "172.30.153.126"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0542458c734eb8e0c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0492bd472e0b60d3d",
            "tags": {
              "AppName": "APIC",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-master-0",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "description": "Created By OpenShift Installer",
            "id": "eni-0e31efa20981888b4",
            "mac_address": "0e:92:f3:a1:fe:c3",
            "private_dns_name": "ip-172-30-167-136.ec2.internal",
            "private_ip": "172.30.167.136",
            "private_ips": [
              "172.30.167.136"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0542458c734eb8e0c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bdb5b484f579c32",
            "tags": {
              "AppName": "APIC",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-master-1",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "description": "Created By OpenShift Installer",
            "id": "eni-04f46b7bee9adc1a9",
            "mac_address": "02:6b:69:3e:83:13",
            "private_dns_name": "ip-172-30-131-39.ec2.internal",
            "private_ip": "172.30.131.39",
            "private_ips": [
              "172.30.131.39"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0542458c734eb8e0c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5f39fd082f14b0b",
            "tags": {
              "AppName": "APIC",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-master-2",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030743829926:security-group/sg-0542458c734eb8e0c",
            "description": "Created By OpenShift Installer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Created By OpenShift Installer",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0542458c734eb8e0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.30.0.0/16"
                ],
                "description": "Created By OpenShift Installer",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.30.0.0/16"
                ],
                "description": "Created By OpenShift Installer",
                "from_port": 22623,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22623
              },
              {
                "cidr_blocks": [
                  "172.30.0.0/16"
                ],
                "description": "Created By OpenShift Installer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.30.0.0/16"
                ],
                "description": "Created By OpenShift Installer",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "50",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 10259
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 4500
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 4789
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 500
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 6081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 6081
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 6641,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 6642
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 9999
              },
              {
                "cidr_blocks": [],
                "description": "Created By OpenShift Installer",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0a5dfa444e1d0df91"
                ],
                "self": true,
                "to_port": 9999
              }
            ],
            "name": "terraform-20220630145952267500000002",
            "name_prefix": null,
            "owner_id": "030743829926",
            "revoke_rules_on_delete": false,
            "tags": {
              "AppName": "APIC",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-master-sg",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-0a6d694ba64b4a5fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030743829926:security-group/sg-0a5dfa444e1d0df91",
            "description": "Created By OpenShift Installer",
            "egress": [],
            "id": "sg-0a5dfa444e1d0df91",
            "ingress": [],
            "name": "terraform-20220630145952266700000001",
            "name_prefix": null,
            "owner_id": "030743829926",
            "revoke_rules_on_delete": false,
            "tags": {
              "AppName": "APIC",
              "DaffyInstaller": "ssavaliya@bjs.com",
              "IBMInstaller": "Daffy",
              "Name": "bjs-cp4i-ms72d-worker-sg",
              "Project": "Digital",
              "kubernetes.io/cluster/bjs-cp4i-ms72d": "owned",
              "ocpCluster": "bjs-cp4i.ocp.bjswholesale.info"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-0a6d694ba64b4a5fc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-3373896483",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-3337575708",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-3198549429",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_etcd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 2379,
            "id": "sgrule-2524632552",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-2681293350",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-3885755023",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.30.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 6443,
            "id": "sgrule-2698827111",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.30.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": -1,
            "id": "sgrule-407749554",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-832676962",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-1240138955",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-2833046450",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-3499522843",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-1732698992",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-520897497",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-3142836278",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-3273212063",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10257,
            "id": "sgrule-2795641481",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10257,
            "id": "sgrule-3739793952",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 10257,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10259,
            "id": "sgrule-1714322954",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10259,
            "id": "sgrule-509927075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 10259,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-727493608",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-1393953601",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6641,
            "id": "sgrule-3753669807",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6641,
            "id": "sgrule-2817971206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 6642,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-3367104097",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-2969259720",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-1827556750",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-346352935",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.30.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22,
            "id": "sgrule-1942306292",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-320420638",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-1800641463",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": "sg-0a5dfa444e1d0df91",
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_mcs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.30.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22623,
            "id": "sgrule-348008359",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0542458c734eb8e0c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22623,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-2617075952",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-3046985559",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-3453480958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": "sg-0542458c734eb8e0c",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-3661813105",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-2718463448",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": "sg-0542458c734eb8e0c",
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.30.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": -1,
            "id": "sgrule-1097045382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-951281546",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": true,
            "source_security_group_id": null,
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-1090111267",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": "sg-0542458c734eb8e0c",
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_nat_t",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-3981395173",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-584416295",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-1520426126",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": "sg-0542458c734eb8e0c",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-4274028385",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": "sg-0542458c734eb8e0c",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-2257248200",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-1867503510",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-386234175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": "sg-0542458c734eb8e0c",
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_nat_t_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-2500191308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": "sg-0542458c734eb8e0c",
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-2359464479",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-4108858038",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": "sg-0542458c734eb8e0c",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-687682032",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-1354207577",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": "sg-0542458c734eb8e0c",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.30.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22,
            "id": "sgrule-2426994235",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-1451926601",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-784336096",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a5dfa444e1d0df91",
            "self": false,
            "source_security_group_id": "sg-0542458c734eb8e0c",
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker"
          ]
        }
      ]
    }
  ]
}